deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: profgate
  namespace: profgate
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: profgate
  ports:
    - name: api
      port: 8080
      targetPort: api
